test/functions/bradc/useBeforeDef/useBeforeDef2.good
Error: Variable 'y' used before defined (useBeforeDef2.chpl:1)
